--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^7.1.0",
+    "node-fetch": "^2.6.1",
     "open": "^7.4.2",
     "url": "^0.11.0"
   }
