--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "commander": "^7.1.0",
-    "node-fetch": "^2.6.1",
     "open": "^7.4.2",
     "url": "^0.11.0"
   }
