--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "commander": "^7.1.0",
+    "jwt-decode": "^3.1.2",
     "open": "^7.4.2",
     "url": "^0.11.0"
   }
